--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@
     height: 449px;
     flex-shrink: 0;
     border-radius: 8px;
-    position:absolute;
+    position:relative;
 }
 
 .main-sub-section-05 {
@@ -326,7 +326,7 @@
     flex-shrink: 0;
     background: #111010;
     margin-top:128px;
-    position:fixed;
+    position:relative;
 }
 
 .footer-child {
