--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@
     font-family: Lato;
     font-size: 16px;
     font-weight: 400;
-    margin-right:500px;
+    margin-right: 500px;
 }
 
 .email-and-button {
@@ -330,9 +330,56 @@
 
 .footer-background-color {
     width: 1922px;
-    height: 449px;
+    height: 350px;
     flex-shrink: 0;
     background: #111010;
     margin-top: 128px;
-    position: relative;
+    
+}
+
+.footer-title {
+    color: #E55473;
+    font-family: Lato;
+    font-size: 48px;
+    font-weight: 800;
+    margin-left:30px;
+
+
+}
+
+.span-02 {
+    color: #FFFFFF;
+}
+
+.footer-discription {
+    color: rgba(255, 255, 255, 0.90);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+
+    display: flex;
+    width: 625px;
+    flex-direction: column;
+    margin-left:570px;
+    margin-top:20px;
+    
+}
+
+.copy-right {
+    color: rgba(255, 255, 255, 0.40);
+    text-align: center;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.hello {
+    text-align: center;
+}
+
+.footer-section {
+    padding: 90px;
 }
